force-app/main/default/objects/Country__c/Country__c.object-meta.xml
<CustomObject>
    <description>Countries from https://countrylayer.com/</description>
    <label>Country</label>
    <nameField>
        <label>Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>