force-app/main/default/objects/Country__c/fields/alpha3Code__c.field-meta.xml
<CustomField>
    <fullName>alpha3Code__c</fullName>
    <label>alpha3Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>