force-app/main/default/objects/Country__c/fields/RegionalBlocs_Acronym__c.field-meta.xml
<CustomField>
    <fullName>RegionalBlocs_Acronym__c</fullName>
    <label>RegionalBlocs Acronym</label>
    <length>50</length>
    <type>Text</type>
</CustomField>